modal on mobile maybe fixed...

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -32,7 +32,7 @@ table {
 .modal-dialog {
     /* min-width: 768px; */
     width: 768px;
-    max-width: 100%;
+    max-width: 98%;
     max-height: 100%;
     vertical-align: middle;
     horizontal-align: middle;
